<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#075D92">

    <!-- Scoreboard Title -->
    <TextView
        android:id="@+id/scoreboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_board_title"
        android:textSize="44sp"
        android:textColor="#FE5900"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Best Time: -->
    <TextView
        android:id="@+id/best_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_time"
        android:textSize="24sp"
        android:textColor="#FE5900"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/scoreboard_title"

        app:layout_constraintStart_toStartOf="parent" />

    <!-- Score List -->
    <TextView
        android:id="@+id/scoreList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />

    <TextView
        android:id="@+id/scoreTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/scoreboard_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Back to Menu Button -->
    <Button
        android:id="@+id/back_to_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        app:layout_constraintEnd_toEndOf="@id/scoreTimeDisplay"
        android:backgroundTint="#FE5900"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
